# dunezs

./: CMakeLists.txt  README.md
DZSCore/: AdcCodeHelper.cxx  AdcCodeHelper.h  AdcTypes.h  CMakeLists.txt  CompressReplace.cxx  CompressReplace.h  SignalTypeConverter.cxx  SignalTypeConverter.h  ZeroSuppress35t.cxx  ZeroSuppress35t.h  ZeroSuppressBase.cxx  ZeroSuppressBase.h
DZSInterface/: AdcCompressService.cxx  AdcCompressService.h  AdcSuppressService.cxx  AdcSuppressService.h  CMakeLists.txt  ChannelNoiseServiceBase.cxx  ChannelNoiseServiceBase.h  PedestalAdditionService.h  SimChannelExtractServiceBase.cxx  SimChannelExtractServiceBase.h
DZSModule/: CMakeLists.txt  SimWireDUNE_module.cc  insler_noise.fcl  new_detsimmodules_dune.fcl  old_detsimmodules_dune.fcl
DZSService/: CMakeLists.txt  CompressReplaceService.h  CompressReplaceService_service.cc  ExponentialChannelNoiseService.h  ExponentialChannelNoiseService_service.cc  ProvidedPedestalAdditionService.h  ProvidedPedestalAdditionService_service.cc  SimChannelExtract35tService.h  SimChannelExtract35tService_service.cc  SimChannelExtractAllService.h  SimChannelExtractAllService_service.cc  StuckBitsService.h  StuckBitsService_service.cc  WhiteChannelNoiseService.h  WhiteChannelNoiseService_service.cc  ZeroSuppress35tLegacyService.h  ZeroSuppress35tLegacyService_service.cc  ZeroSuppress35tService.h  ZeroSuppress35tService_service.cc  ZeroSuppressFixedService.h  ZeroSuppressFixedService_service.cc  ZeroSuppressServiceBase.h
test/: CMakeLists.txt
test/DZSCore/: CMakeLists.txt  test_AdcCodeHelper.cxx  test_CompressReplace.cxx  test_SignalTypeConverter.cxx  test_ZeroSuppress35t.cxx
test/DZSService/: CMakeLists.txt  test_CompressReplaceService.cxx  test_Dune35tZeroSuppressService.cxx  test_Legacy35tZeroSuppressService.cxx  (+3 more)
ups/: CMakeLists.txt  product-config.cmake.in  product_deps
(+59 files in other folders)
